--- a/package.json
+++ b/package.json
@@ -11,7 +11,16 @@
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^6.23.1",
+    "@apollo/client": "^3.12.6",
+    "antd": "^5.24.1",
+    "bootstrap": "^5.2.3",
+    "graphql": "^16.10.0",
+    "jwt-decode": "^4.0.0",
+    "react-bootstrap": "^2.7.4",
+    "react-toastify": "^11.0.3",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
