--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^6.23.1",
     "@apollo/client": "^3.12.6",
     "antd": "^5.24.1",
     "bootstrap": "^5.2.3",
+    "fs": "^0.0.1-security",
     "graphql": "^16.10.0",
+    "inquirer": "^12.9.0",
     "jwt-decode": "^4.0.0",
+    "react": "^19.0.0",
     "react-bootstrap": "^2.7.4",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^6.23.1",
     "react-toastify": "^11.0.3",
+    "ts-node": "^10.9.2",
     "validator": "^13.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/node": "^24.1.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
